# Spatial-filtering-reimagined

./: .gitignore  README.md  pyproject.toml
docs/: index.html  references.bib  report.tex  script.md  study_guide.md
results/tables/: all_results.csv  sweep_avgf.csv  sweep_ngkcs.csv
scripts/: download_datasets.sh  make_bht_previews.py  make_previews.py  resume_downloads.sh
src/datasets/: select_samples.py
src/degradation/: poisson_gaussian.py
src/experiments/: parameter_sweep.py  run_pipeline.py
src/filters/custom/: avgf.py  ngkcs.py
src/filters/standard/: box.py  laplacian_unsharp.py  median.py  sobel.py
src/filters/utils/: convolution.py  kirsch_kernels.py  noise_estimation.py
src/metrics/: epi_fom.py  psnr_ssim.py  segmentation_iou.py
src/visualization/: plot_results.py
tests/: test_filters.py
