[project]
name = "spatial-filters-project"
version = "0.1.0"
description = "Investigation and Custom Design of Spatial Filters for Noise-Robust Enhancement of Fluorescence Microscopy Images"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "tifffile>=2023.7.18",
    "imagecodecs>=2023.1.1",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "Pillow>=10.0",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]